# ai-assistant

./: .dockerignore  .env.sample  .gitignore  podman-compose.images.yml  podman-compose.rpi-cpu.yml  podman-compose.rpi.yml  podman-compose.yml
DevicePairingFunction/: DevicePairingFunction.csproj  Program.cs  local.settings.sample.json
SpeechService/: SpeechService.sln  run-tts.sh
docker/: agent.Dockerfile  client.Dockerfile  stt-server-hailo.Dockerfile  stt-server.Dockerfile  tts.Dockerfile
docs/: speech-synthesis-strategy.md
scripts/: run-mac.sh  run-rpi.sh
voice-agent/: env.sh.template  run-agent.sh  voice-agent.sln
whisper-streaming/: README.md  deploy.sh  pyproject.toml  rpi-client.sh  rpi-server.sh
whisper-streaming/client/: audio.py  main.py  tts.py
whisper-streaming/client-rs/: Cargo.toml
whisper-streaming/client-rs/src/: main.rs
whisper-streaming/client/vad/: __init__.py  base.py  silero_vad.py  webrtc_vad.py
whisper-streaming/server/: main.py  transcriber.py  utils.py
whisper-streaming/server/backends/: __init__.py  base.py  faster_backend.py  hailo_backend.py  mlx_backend.py
whisper-streaming/tests/: test_audio.py  test_backend_factory.py  test_backends_base.py  test_client_streaming.py  test_faster_backend.py  test_integration.py  test_mlx_backend.py  test_server.py  test_silero_vad.py  test_streaming_handler.py  test_streaming_session.py  test_transcriber.py  test_utils.py  test_vad_base.py  test_vad_factory.py  test_webrtc_vad.py
whisper-test/: bench_one.py  benchmark.py  test.json  test.srt  test.tsv  test.txt  test.vtt  (+1 more)
(+65 files in other folders)
