[project]
name = "whisper-streaming"
version = "0.1.0"
description = "Real-time streaming transcription with Whisper"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
server-mlx = ["mlx-whisper>=0.1.0"]
server-faster = ["faster-whisper>=1.0.0"]
client = [
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
]
client-silero = ["silero-vad>=4.0.0"]
telemetry = [
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "azure-monitor-opentelemetry>=1.6.4",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["server*", "client*"]

[tool.ruff]
line-length = 100
target-version = "py310"
