[package]
name = "whisper_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
webrtc-vad = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
